Quick: Remove content that is now in other repos

--- a/package.json
+++ b/package.json
@@ -1,35 +1,31 @@
 {
   "name": "tacc-web-content",
   "version": "1.0.0",
-  "description": "A collection of web content history and markup templating utilities for Liferay Portal web content in the TACC Website",
+  "description": "A collection of Web Content history, and markup creation utilities, for the TACC Website",
   "main": "index.js",
-  "dependencies": {},
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "nps": "^5.9.12",
     "shx": "^0.3.2"
   },
   "// scripts": {
-    "postinstall": "After installing dependencies, do so all child projects",
     "build": "Build markup for all projects",
-    "install:…": "Install dependencies for one project",
     "build:…": "Build markup for one project",
     "postbuild:…": "Perform tasks after building markup"
   },
   "scripts": {
-    "postinstall": "npm-run-all --parallel install:*",
     "build": "npm-run-all --parallel build:*",
-    "install:sc19": "cd src/sc19 && npm install",
-    "build:sc19": "cd src/sc19 && npm run build",
+    "build:sc19": "echo 'Since extracting utilities, markup creation is not yet scripted. See https://github.com/tacc-wbomar/tacc-web-sc19-page, instead.'",
+    "build:sc19_disabled": "cd src/sc19 && npm run build",
     "postbuild:sc19": "npm-run-all --sequential postbuild:sc19:*",
     "postbuild:sc19:export": "shx mv ./src/sc19/dist/sc19--content.html ./content/news/conferences/sc/",
     "postbuild:sc19:open": "open './content/news/conferences/sc/sc19--content.html'",
     "postbuild:sc19:report": "echo \"Markup exported to './content/news/conferences/sc/'\"",
-    "install:dir": "cd src/directory && npm install",
-    "build:dir": "cd src/directory && npm run build",
+    "build:dir": "echo 'Since extracting utilities, markup creation is not yet scripted. See https://github.com/tacc-wbomar/tacc-web-staff-dir, instead.'",
+    "build:dir_disabled": "cd src/directory && npm run build",
     "postbuild:dir": "npm-run-all --sequential postbuild:dir:*",
     "postbuild:dir:open": "open \"./src/directory/dist/staff.html\"",
-    "postbuild:dir:report": "echo \"Markup available in './src/directory/dist/staff.html'\""
+    "postbuild:dir:report": "echo \"Markup available in './src/directory/dist/staff.html'\"",
+    "build:jobs": "echo 'Since extracting utilities, markup creation is not yet scripted. See https://github.com/tacc-wbomar/tacc-web-jobs-page, instead.'"
   },
   "repository": {
     "type": "git",
